# ga-test

./: README.md  main.py  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: custom.yml  main.yml  project-test.yml
_out/: test.py
generator/: generator.py
src/calculator/: main.py  utils.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: .coverage  test_utils.py
