[metadata]
name = calculator
description = basic calculator
author = m4tice
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    calculator
python_requires = >=3.7
package_dir = =src
zip_safe = no

[option.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[option.package_data]
calculator = py.typed

[flake8]
max-line-length = 160